tests/invalid/precedence_escape_over_string.nano
..
    escaped "bad\q"
    trailing "closed" text
